# face-detect.cpp

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/: RESULTS.md
benchmarks/demo/: face_carousel.py  face_carousel_square.py  face_demo.py  face_identity.py
benchmarks/demo/paintings/: README.md  face_carousel.py  face_carousel_square.py  face_demo.py
benchmarks/demo/paintings/art/: sources.txt
docs/: benchmarks.md  conversion.md  cpu-optimization.md  parity.md  quantization.md
examples/cli/: CMakeLists.txt  main.cpp
include/: facedetect.h  facedetect_capi.h
models/: MANIFEST.md
scripts/: apply_ggml_patches.sh  bench_compare.py  convert_facedetect_to_gguf.py  gen_baseline.py  gpu_verify.sh  requirements.txt  run_detector_parity.sh  run_embedding_parity.sh  run_sface_parity.sh  run_yunet_parity.sh  tensor_manifest_buffalo_l.md  tensor_manifest_buffalo_m.md  tensor_manifest_buffalo_s.md  tensor_manifest_yunet_sface.md  trace_onnx_manifest.py
src/: align.cpp  align.hpp  antispoof_graph.cpp  antispoof_graph.hpp  arcface_graph.cpp  arcface_graph.hpp  backend.cpp  backend.hpp  common.hpp  detect.cpp  detect.hpp  directconv.cpp  directconv.hpp  facedetect.cpp  facedetect_capi.cpp  genderage_graph.cpp  genderage_graph.hpp  graph_ops.cpp  graph_ops.hpp  image_io.cpp  image_io.hpp  landmark_graph.cpp  landmark_graph.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  preprocess.cpp  preprocess.hpp  scrfd_graph.cpp  scrfd_graph.hpp  sface_graph.cpp  sface_graph.hpp  winograd.cpp  winograd.hpp  yunet_graph.cpp  yunet_graph.hpp
tests/: CMakeLists.txt  parity.hpp  test_align.cpp  test_antispoof.cpp  test_arcface_block.cpp  test_arcface_stem.cpp  test_cache_safety.cpp  test_decode.cpp  test_detect.cpp  test_embedding.cpp  test_genderage.cpp  test_landmarks.cpp  test_nms.cpp  test_preprocess.cpp  test_scrfd_graph.cpp  test_sface_embedding.cpp  test_smoke.cpp  test_yunet.cpp
tests/fixtures/: PROVENANCE.md  README.md
tests/python/: check_convert.py
